--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="theme-color" content="#5A1819" />
+<meta name="theme-color" content="#933018" />
 <meta name="viewport" content="width-device-width, initial-scale=1" />
 <title>SLEEKART STUDIOS</title>
 <link rel="icon" href="imagenes/favicom.png" type="image/png">
@@ -27,7 +27,8 @@ body,td,th {
   <p class="desc-d">He aquí canales con los que hemos colaborado</p>
   <a href="https://www.youtube.com/user/RobTerFlims?sub_confirmation=1" target="new" class="botn">YOUTUBE</a>  </div>
   <footer class="fin">
-    <p>Copyright &copy; Todos los derechos reservados</p>
+	  <br/>
+    <p>Copyright &copy; Todos los derechos reservados.</p>
   </footer>
 </div>
 </body>
