--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="theme-color" content="#933018" />
+<meta name="apple-mobile-web-app-status-bar-style" content="#933018" />
 <meta name="viewport" content="width-device-width, initial-scale=1" />
 <title>SLEEKART STUDIOS</title>
 <link rel="icon" href="imagenes/favicom.png" type="image/png">
@@ -28,7 +29,8 @@ body,td,th {
   <a href="https://www.youtube.com/user/RobTerFlims?sub_confirmation=1" target="new" class="botn">YOUTUBE</a>  </div>
   <footer class="fin">
 	  <br/>
-    <p>Copyright &copy; Todos los derechos reservados.</p>
+	  <br/>
+    <p align="center">Copyright &copy; Todos los derechos reservados.</p>
   </footer>
 </div>
 </body>
