--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body,td,th {
   <div class="fon_ca">
 <header class="cabeza">SLEEKART STUDIO</header>
 </div>
-  <div class="img_me"> <img src="imagenes/logo.jpg" alt="" width="200" height="205" class="logoC"/></div>
+  <div class="img_me"> <img src="imagenes/logo.jpg" alt="" width="175" height="173" class="logoC"/></div>
   <div align="center" >
     <p class="desc-d">Bienvenido a SleekArt Studio, a continuación te proporcionare nuestras redes sociales que tenemos actualmente</p>
   </div>
@@ -30,7 +30,7 @@ body,td,th {
   <footer class="fin">
 	  <br/>
 	  <br/>
-    <p align="center">Copyright &copy; Todos los derechos reservados.</p>
+    <p align="center">Copyright &copy; 2020&nbsp;· Redes.</p>
   </footer>
 </div>
 </body>
