--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="theme-color" content="#933018" />
 <meta name="apple-mobile-web-app-status-bar-style" content="#933018" />
 <meta name="viewport" content="width-device-width, initial-scale=1" />
-<title>SLEEKART STUDIOS</title>
+<title>SleekArt Studio | Creativos</title>
 <link rel="icon" href="imagenes/favicom.png" type="image/png">
 <link href="cssdoc.css" rel="stylesheet" type="text/css">
 <style type="text/css">
@@ -17,7 +17,7 @@ body,td,th {
 
 <body>
 <div class="cuerpo">
-  <div class="fon_ca">
+  <div class="fon_ca" align="center">
 <header class="cabeza">SLEEKART STUDIO</header>
 </div>
   <div class="img_me"> <img src="imagenes/logo.jpg" alt="" width="175" height="173" class="logoC"/></div>
