--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@ body,td,th {
 </div>
   <div class="img_me"> <img src="imagenes/logo.jpg" alt="" width="175" height="173" class="logoC"/></div>
   <div align="center" >
-    <p class="desc-d">Bienvenido a SleekArt Studio, a continuación te proporcionare nuestras redes sociales que tenemos actualmente</p>
+    <p class="desc-d">Bienvenido a SleekArt Studio, a continuación te proporcionare nuestras redes sociales que tenemos actualmente:</p>
   </div>
   <div class="botones" align="center"> <a href="https://www.facebook.com/sleekartstudio" target="new" class="botn">FACEBOOK</a>
-  <p class="desc-d">He aquí canales con los que hemos colaborado</p>
+  <p class="desc-d">He aquí canales de Youtube con los que hemos podido colaborar.</p>
   <a href="https://www.youtube.com/user/RobTerFlims?sub_confirmation=1" target="new" class="botn">YOUTUBE</a>  </div>
   <footer class="fin">
 	  <br/>
