--- a/index.html
+++ b/index.html
@@ -1,37 +1,53 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="theme-color" content="#933018" />
-<meta name="apple-mobile-web-app-status-bar-style" content="#933018" />
-<meta name="viewport" content="width-device-width, initial-scale=1" />
-<title>SleekArt Studio | Creativos</title>
-<link rel="icon" href="imagenes/favicom.png" type="image/png">
-<link href="cssdoc.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-body,td,th {
-    font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
-}
-</style>
-</head>
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="utf-8">
+        <title>SleekArt Studio | Creativos</title>
+        <link rel="icon" href="img/favicon.png" type="image/png">
+        <link href="pag1sleek.css" rel="stylesheet" type="text/css">
+        <meta name="theme-color" content="#000000" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="#000000" />
+        <meta name="viewport" content="width-device-width, initial-scale=1" />
+    </head>
+    <body>
+    <div class="contenedor">
+    <!--cabecera-->
+        <header class="cabeza-titulo">
+            <h2>SLEEKART</h2>
+        </header>
 
-<body>
-<div class="cuerpo">
-  <div class="fon_ca" align="center">
-<header class="cabeza">SLEEKART STUDIO</header>
-</div>
-  <div class="img_me"> <img src="imagenes/logo.jpg" alt="" width="175" height="173" class="logoC"/></div>
-  <div align="center" >
-    <p class="desc-d">Bienvenido a SleekArt Studio, a continuación te proporcionare nuestras redes sociales que tenemos actualmente:</p>
-  </div>
-  <div class="botones" align="center"> <a href="https://www.facebook.com/sleekartstudio" target="new" class="botn">FACEBOOK</a>
-  <p class="desc-d">He aquí canales de Youtube con los que hemos podido colaborar.</p>
-  <a href="https://www.youtube.com/user/RobTerFlims?sub_confirmation=1" target="new" class="botn">YOUTUBE</a>  </div>
-  <footer class="fin">
-	  <br/>
-	  <br/>
-    <p align="center">Copyright &copy; 2020&nbsp;· Redes.</p>
-  </footer>
-</div>
-</body>
+    <!--Primera seccion presentación-->
+        <section class="cabeza-foto">
+            <h3>Ponemos color a tu vida</h3>
+            <div class="circle">
+                <img src="/img/logo.png" alt="">
+            </div>
+            <div>
+                <p class="descrip">"Comprometidos a crear una huella unica para su marca, y dejar rastro en el mundo"</p>
+            </div>
+        </section>
+        <!--Servicios-->
+        <section class="servicio">
+            <div>
+                <a class="boton-servicio" href="#">Servicios</a>
+            </div>
+        </section>
+    <!--contacto-->
+        <section class="contacto">
+            <div>
+                <p class="titulo-contacto">Contacto</p>
+                <a class="boton" href="https://wa.me/5219612581145">Whatsapp</a>
+                <a class="boton" href="https://www.facebook.com/sleekartstudio">Facebook</a>
+                <a class="boton" href="https://www.instagram.com/sleekartstudio">Instagram</a>
+                <a class="boton" href="https://t.me/sleekartstudio">Telegram</a>
+                <a class="boton" href="mailto:sleekartstudio@gmail.com">Correo</a>
+            </div>
+        </section>
+
+    <!--final-->
+        <section class="final">
+            <footer>&copy; 2021 SLEEKART STUDIO. All rights reserved.</footer>
+        </section>
+    </div>
+    </body>
 </html>
