--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="cabeza-foto">
             <h3>Ponemos color a tu vida</h3>
             <div class="circle">
-                <img src="/img/logo.png" alt="">
+                <img src=".../img/logo.png" alt="">
             </div>
             <div>
                 <p class="descrip">"Comprometidos a crear una huella unica para su marca, y dejar rastro en el mundo"</p>
