--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>SleekArt Studio | Creativos</title>
-        <link rel="icon" href="img/favicon.png" type="image/png">
+        <link rel="icon" href="./img/favicon.png" type="image/png">
         <link href="pag1sleek.css" rel="stylesheet" type="text/css">
         <meta name="theme-color" content="#000000" />
         <meta name="apple-mobile-web-app-status-bar-style" content="#000000" />
