--- a/servicios.html
+++ b/servicios.html
@@ -16,7 +16,7 @@
     <div class="contenservi">
     <!--cabecera-->
         <header class="tituservi">
-            <a class="cerra" href="./Index.html"><strong>X</strong></a>
+            <a class="cerra" href="./index.html"><strong>X</strong></a>
             <div class="nomser"><h2 >SERVICIOS</h2></div>
         </header>
     <!--Primera seccion presentación-->
