--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>SleekArt Studio | Creativos</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="icon" href="./img/favicon.png" type="image/png">
-        <link href="./css/pag1sleek.css" rel="stylesheet" type="text/css">
+        <link href="./css/index.css" rel="stylesheet" type="text/css">
         <meta name="theme-color" content="#000000" />
         <meta name="apple-mobile-web-app-status-bar-style" content="#000000" />
         <meta name="viewport" content="width-device-width, initial-scale=1" />
@@ -17,6 +17,20 @@
             <h2>SLEEKART</h2>
         </header>
 
+             <!--Boton flotante de navegacion-->
+
+             <div class="continer-boton">
+                <input type="checkbox" id="toggle">
+                <label for="toggle" class="botom"></label>
+                <nav class="nav">
+                    <a href="/index.html">Inicio</a>
+                    <a href="/servicios.html">Servicios</a>
+                    <a href="https://api.whatsapp.com/send?text=Tarjeta de presentación: bit.ly/SleekArtStudio">Compartir en Whatsapp</a>
+                    <a href="#">QR</a>
+                    <a href="#">Nosotros</a>
+                </nav>
+            </div> 
+
     <!--Primera seccion presentación-->
         <section class="cabeza-foto">
             <h3>Ponemos color a tu vida</h3>
@@ -27,10 +41,13 @@
                 <p class="descrip">"Comprometidos a crear una huella unica para su marca, y dejar rastro en el mundo"</p>
             </div>
         </section>
+
+
+
         <!--Servicios-->
         <section class="servicio">
             <div>
-                <a class="boton-servicio" href="./servicios.html">Servicios</a>
+                <a class="boton-servicio" href="/servicios.html">Servicios</a>
             </div>
         </section>
     <!--contacto-->
