--- a/servicios.html
+++ b/servicios.html
@@ -16,9 +16,21 @@
     <div class="contenservi">
     <!--cabecera-->
         <header class="tituservi">
-            <a class="cerra" href="./index.html"><strong>X</strong></a>
             <div class="nomser"><h2 >SERVICIOS</h2></div>
         </header>
+    <!--Boton flotante de navegacion-->
+
+        <div class="continer-boton">
+            <input type="checkbox" id="toggle">
+            <label for="toggle" class="botom"></label>
+            <nav class="nav">
+                <a href="/index.html">Inicio</a>
+                <a href="/servicios.html">Servicios</a>
+                <a href="https://api.whatsapp.com/send?text=Tarjeta de presentación: bit.ly/SleekArtStudio">Compartir en Whatsapp</a>
+                <a href="#">QR</a>
+                <a href="#">Nosotros</a>
+            </nav>
+        </div> 
     <!--Primera seccion presentación-->
     <section>
         <div class="comen" >
